examples/test/testpolicy12054.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12054
  namespace: namespace446
spec:
  podSelector:
    matchLabels:
      key6: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value7
      podSelector:
        matchLabels:
          key13: value41
          key4: value32
          key25: value25
